# todo-api

./: .gitignore  README.md  note.md  prd.md  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_auth.py  test_security.py  test_tasks.py
