[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
